--- a/_posts/2021-01-31-开篇.md
+++ b/_posts/2021-01-31-开篇.md
@@ -5,8 +5,12 @@ date: 2021-01-31 11:29:00
 categories:
  - 随笔
 tags:
+mathjax: true
 ---
 > 使用github pages写的第一篇博客
+
+<!--more-->
+
 ## 一些废话
 之前一直在[博客园](https://www.cnblogs.com/DinoMax/)写东西，发过几篇无聊的题解，但总感觉不够炫酷，折腾了一整天，总算把[Github Pages](https://pages.github.com/)搞好了。所谓*工欲善其事必先利其器*，用比较好看的博客写东西大概能使人心情愉悦。博客的主题使用[NexT](http://theme-next.simpleyyt.com/)，页面很漂亮，十分感谢。
 
@@ -16,7 +20,7 @@ tags:
 
 ## 代码高亮测试
 
-```C++
+```c++
 // pow(x,n)%mod O(logn)
 
 ll mod_pow(ll x,ll n,ll mod)
@@ -34,4 +38,4 @@ ll mod_pow(ll x,ll n,ll mod)
 ## 数学公式测试
 $$a^2+b^2=c^2$$
 
-<div align=center> ![弦图](../sources/001.png)
+<div align=center> ![弦图](/sources/001.png)
